added search reset in rentals and customers list

--- a/assets/scripts/modules/customers/views/templates/customers-toolbar-template.jade
+++ b/assets/scripts/modules/customers/views/templates/customers-toolbar-template.jade
@@ -8,8 +8,10 @@
         |  New Customer
 .col-md-4.col-sm-12.no-right-padding
   .table-group-actions.pull-right
-    input#customers-query.table-group-action-input.form-control.input-inline.input-small.input-sm(type='text', name='order_quantity_from')
-    | &nbsp;
+    .input-icon.right.pull-left.list-search-group
+      i.fa.fa-times.tooltips.reset-search.hidden(data-original-title='Reset Search', data-container='body')
+      input#customers-query.table-group-action-input.form-control.input-inline.input-small.input-sm(type='text', name='order_quantity_from')
+      | &nbsp;
     button#customers-search.btn.btn-sm.purple.filter-submit.margin-bottom
       i.fa.fa-search
       |  Search
