--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-template.jade
@@ -108,7 +108,7 @@
                   option(value="EMPTY") EMPTY
       .row
         .form-group.col-md-3.col-sm-6.col-xs-12
-          label.col-md-12.control-label
+          label.col-md-12.control-lablfel
             | Daily rate
             span.required(aria-required='true') *
           .col-md-12
