refactored vehicle select2 data preparation in rental form

--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-template.jade
@@ -41,6 +41,7 @@
         .inputs.col-md-3.left
           .portlet-input.input-inline.input-small
             .select2-container-div
+              i.spinner.fa.fa-spinner.fa-pulse
               input.form-control.width-150(type='text', name='vehicle_search', placeholder='search...' value="#{vehicle.get('itemID')}")
         .tools.col-md-1.right
           a.expand(href='javascript:;', data-original-title='', title='')
