deposits refactored to have local search

--- a/assets/scripts/modules/deposits/views/templates/deposits-template.jade
+++ b/assets/scripts/modules/deposits/views/templates/deposits-template.jade
@@ -1,3 +1,7 @@
+#toolbar
+  .actions
+    button#list-refresh.btn.btn-sm.purple.filter-submit.margin-bottom
+      i.fa.fa-refresh
 .dataTables_wrapper.no-footer
   table.table.table-bordered.table-hover(id="#{dataTableId}")
     thead
