--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -211,6 +211,9 @@ tr.deleted {
 .due-today {
   background-color: #FAEA92;
 }
+.past-due-date {
+  background-color: #F59595;
+}
 
 tr.clickable  {
   cursor: pointer;
