refactored deposits fetching, probably its temporary

--- a/assets/scripts/modules/deposits/views/templates/deposits-template.jade
+++ b/assets/scripts/modules/deposits/views/templates/deposits-template.jade
@@ -1,6 +1,6 @@
-#toolbar
+#toolbar.deposits-toolbar
   .actions
-    button#list-refresh.btn.btn-sm.purple.filter-submit.margin-bottom
+    button#list-refresh.btn.btn-md.purple.filter-submit.margin-bottom
       i.fa.fa-refresh
 .dataTables_wrapper.no-footer
   table.table.table-bordered.table-hover(id="#{dataTableId}")
