--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -242,3 +242,9 @@ i.fa-warning.validation-error {
     color: red;
   }
 }
+
+.deposits-toolbar {
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+}
