fix table going out of modal borders bug

--- a/assets/scripts/modules/deposits/layout-template.jade
+++ b/assets/scripts/modules/deposits/layout-template.jade
@@ -1,5 +1,5 @@
 .deposits-content
   h3.page-title Deposits
   #main
-  #modal.modal.fade
-    .modal-dialog
+  #modal.bs-modal-lg.modal.fade
+    .modal-dialog.modal-lg
