--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-row-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-row-template.jade
@@ -3,21 +3,21 @@ td
 td
   = invoiceNumber
 td
-  = customer.get('firstName')
+  = customer.firstName
 td
-  = customer.get('lastName')
+  = customer.lastName
 td
-  = customer.get('driverLicense')
+  = customer.driverLicense
 td
-  = vehicle.get('color')
+  = vehicle.color
 td
-  = vehicle.get('year')
+  = vehicle.year
 td
-  = vehicle.get('make')
+  = vehicle.make
 td
-  = vehicle.get('model')
+  = vehicle.model
 td
-  = vehicle.get('plateNumber')
+  = vehicle.plateNumber
 td
   = days
 td
