running app separately from gulp build on production

--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-template.jade
@@ -29,7 +29,7 @@
             a.expand(href='javascript:;', data-original-title='', title='')
       .portlet-body.display-hide
         #customer-region
-  .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet.additional-drivers-portlet
+  .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet.additional_drivers-portlet
     .portlet.light
       .portlet-title
         .col-md-4.caption
@@ -96,7 +96,7 @@
           a.expand(href='javascript:;', data-original-title='', title='')
       .portlet-body.display-hide
         #payments-region
-  .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet.aditional-fees-portlet
+  .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet.aditional_fees-portlet
     .portlet.light
       .portlet-title
         .col-md-4.caption
