adjustments to make rent agreements table fit on screen

--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreements-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreements-template.jade
@@ -1,4 +1,4 @@
-.dataTables_wrapper.no-footer
+.dataTables_wrapper.no-footer.table-scrollable
   table.table.table-bordered.table-hover(id="#{dataTableId}")
     thead
       tr
