Global changes: 1) changed backbone.picky(deprecated) to backbone.select
Rental:
1) move actions in rental list from rows to toolbar
2) extension dont send amountDue and dueDate
3) set status to SUBMITTED when updating rental
4) fixes

--- a/assets/scripts/modules/rent-agreement/views/templates/extend-rent-agreement-modal-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/extend-rent-agreement-modal-template.jade
@@ -55,14 +55,14 @@
           .input-icon.right
             i.fa.fa-info-circle.tooltips(data-original-title='Discount Rate', data-container='body')
             input.form-control(type='text' name='amount_paid')
-      .form-group.col-md-4.col-sm-6.col-xs-12
-        label.col-md-12.control-label
-          | Amount Due
-          span.required(aria-required='true') *
-        .col-md-12
-          .input-icon.right
-            i.fa.fa-info-circle.tooltips(data-original-title='Discount Rate', data-container='body')
-            input.form-control(type='text' name='amount_due')
+      //.form-group.col-md-4.col-sm-6.col-xs-12
+      //  label.col-md-12.control-label
+      //    | Amount Due
+      //    span.required(aria-required='true') *
+      //  .col-md-12
+      //    .input-icon.right
+      //      i.fa.fa-info-circle.tooltips(data-original-title='Discount Rate', data-container='body')
+      //      input.form-control(type='text' name='amount_due')
 
   .modal-footer
     button.btn.default(type='button', data-dismiss='modal') Cancel
