--- a/assets/scripts/modules/rent-agreement/views/templates/list-toolbar-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/list-toolbar-template.jade
@@ -1,11 +1,12 @@
 .col-md-8.col-sm-12.no-left-padding
   .actions
-    button#list-refresh.btn.btn-sm.purple.filter-submit.margin-bottom
+    button#list-refresh.list-refresh-button.btn.btn-sm.purple.filter-submit.margin-bottom
       i.fa.fa-refresh
-    a.btn.default.purple-stripe.input-inline.input-small.input-sm(href='#rent-agreement')
+    a.btn.default.purple-stripe.input-inline.input-small.input-sm.new-agreement(href='#rent-agreement')
       i.fa.fa-plus
       span.hidden-480
         |  New Agreement
+    .actions-region(data-region='actions-region')
 .col-md-4.col-sm-12.no-right-padding
   .table-group-actions.pull-right
     .input-icon.right.pull-left.list-search-group
