--- a/assets/scripts/modules/rent-agreement/views/templates/rental-actions.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rental-actions.jade
@@ -1,13 +1,13 @@
 unless disabled
   a.btn.default.btn-xs.green.download-row(href="#{externalDocUrl}" data-toggle="tooltip" title="Download PDF version of agreement")
-    i.fa.fa-download
+    i.fa.fa-download &nbsp;Download
   a.btn.default.btn-xs.purple.notes-row(href="#" data-toggle="tooltip" title="Agreement Notes")
-    i.fa.fa-comments-o
+    i.fa.fa-comments-o &nbsp;Notes
   if gpsTrackings.length
     a.btn.default.btn-xs.blue.view-tracking(href="#" data-toggle="tooltip" title="Show vehicle movements")
-      i.fa.fa-compass
+      i.fa.fa-compass &nbsp;GPS
   if status.toLowerCase() !== "closed"
     a.btn.default.btn-xs.blue.extend-row(href="#" data-toggle="tooltip" title="Extend rent agreement")
-      i.fa.fa-angle-double-right
+      i.fa.fa-angle-double-right &nbsp;Extend
     a.btn.default.btn-xs.red.close-row(href="#" data-toggle="tooltip" title="Close rent agreement")
-      i.fa.fa-times
+      i.fa.fa-times &nbsp;Close
