update to node v4, serve static files, add vscode config

--- a/assets/stylesheets/metronic/pages/login.scss
+++ b/assets/stylesheets/metronic/pages/login.scss
@@ -13,7 +13,7 @@ Login page
 }
 
 .login .content {
-  background: url(../../../images/bg-dark-lock.png) repeat;
+  background: url(../../../img/bg-dark-lock.png) repeat;
   width: 360px;
   margin: 0 auto;
   margin-bottom: 0px;
